# routes/posts.route.js
@@ -5,5 +5,6 @@ var express = require('express')
 var router = express.Router()
 
 router.post('/add-post', postsController.addPost)
+router.get('/get-all-post', postsController.getAllPosts)
 
 module.exports = router
